default/sitcon-party/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sitcon-party
  labels:
    owner: SITCON
    app: sitcon-party
    dummy: "1"
spec:
  template:
    metadata:
      labels:
        app: sitcon-party
        owner: SITCON
    spec:
      containers:
      - name: sitcon-party
        image: tonyhhyip/sitcon-x-hk-party-game-2017:1.0.0
        imagePullPolicy: IfNotPresent
        command:
          - node
          - "src/backend/server.js"
        ports:
          - containerPort: 80
            name: http
        readinessProbe:
          tcpSocket:
            port: http
        livenessProbe:
          tcpSocket:
            port: http
