default/sitcon-party/redis.yml
#
# Redis Cluster service
#
kind: Service
apiVersion: v1
metadata:
  name: sitcon-party-redis
spec:
  selector:
    app: sitcon-party-redis
    owner: SITCON
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sitcon-party-redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sitcon-party-redis
        name: redis
        owner: SITCON
    spec:
      containers:
        - name: redis
          image: redis:3-alpine
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 500Mi
          ports:
            - name: redis
              containerPort: 6379
              protocol: "TCP"
          volumeMounts:
            - name: "redis-data"
              mountPath: "/var/lib/redis"
      volumes:
        - name: redis-data
          emptyDir: {}
