default/sitcon-party/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sitcon-party
  labels:
    owner: SITCON
    app: sitcon-party
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    owner: SITCON
    app: sitcon-party
