default/sitcon-party/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sitcon-party
  labels:
    app: sitcon-party
    owner: SITCON
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: hk.sitcon.party
      http:
        paths:
          - path: /
            backend:
              serviceName: sitcon-party
              servicePort: 80
